--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -66,3 +66,32 @@
 .carrito {
     margin-right: 15px;
 }
+
+.itemListContainer {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+
+.itemCounter {
+    border: 1px solid rgb(170, 170, 170);
+    border-radius: 4px;
+    max-width: 200px;
+    margin: auto;
+}
+
+.itemCounter button {
+    font-size: 1.2rem;
+    margin: 10px;
+    background-color: #024ea4; 
+    border: none;
+    border-radius: 4px;
+    color: white;
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
+.itemCounter span {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
