--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -74,16 +74,17 @@
 }
 
 .itemCounter {
-    border: 1px solid rgb(170, 170, 170);
+    border: 1px solid rgb(229, 229, 229);
     border-radius: 4px;
     max-width: 200px;
     margin: auto;
+    flex-basis: 15%;
 }
 
 .itemCounter button {
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     margin: 10px;
-    background-color: #024ea4; 
+    background-color: #00c56c; 
     border: none;
     border-radius: 4px;
     color: white;
@@ -92,6 +93,41 @@
 }
 
 .itemCounter span {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: bold;
 }
+
+.itemList {
+    
+}
+
+.articulo {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.articulo img {
+    max-width: 200px;
+    flex-basis: 15%;
+}
+
+.datosArticulo {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    flex-basis: 70%;
+    border-bottom: 1px solid rgb(229, 229, 229);
+    margin-left: 10px;
+}
+
+.titulo {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #1a7db7;
+}
+
+.numeroParte span, .precio span, .stock span {
+    font-weight: bold;
+}
+
