--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -181,3 +181,15 @@
     color: #1a7db7;
 }
 
+.botonFinalizar {
+    text-decoration: none;
+    font-size: 0.8rem;
+    margin: 10px;
+    background-color: #797979; 
+    border: none;
+    border-radius: 4px;
+    color: white;
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
