--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -97,10 +97,6 @@
     font-weight: bold;
 }
 
-.itemList {
-    
-}
-
 .articulo {
     display: flex;
     justify-content: space-between;
@@ -186,6 +182,43 @@
     font-size: 0.8rem;
     margin: 10px;
     background-color: #797979; 
+    border: none;
+    border-radius: 4px;
+    color: white;
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
+.tablaCarrito {
+    margin: 0 auto;
+}
+
+.tablaCarrito td {
+    padding: 20px;
+}
+
+.divTablaCarrito {
+    padding: 20px;
+    border-bottom: 1px solid rgb(229, 229, 229);
+}
+
+.botonQuitar {
+    text-decoration: none;
+    font-size: 0.8rem;
+    margin: 10px;
+    background-color: #797979; 
+    border: none;
+    border-radius: 4px;
+    color: white;
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
+.botonVaciar {
+    text-decoration: none;
+    font-size: 0.8rem;
+    margin: 10px;
+    background-color: #b52f2f; 
     border: none;
     border-radius: 4px;
     color: white;
