--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -160,9 +160,17 @@
 }
 
 .linkCategorias {
-    padding-right: 10px;
+    margin-right: 10px;
     font-size: 1.4rem;
     color: black;
+}
+
+.linkCategorias:hover {
+    color: #1a7db7;
+}
+.linkCategorias:focus {
+    color: #1a7db7;
+    border-bottom: 1px solid #1a7db7;
 }
 
 .linkTitulo {
@@ -171,10 +179,6 @@
 
 .linkCategorias, .linkTitulo {
     text-decoration: none;
-}
-
-.linkTitulo:visited {
-    color: #1a7db7;
 }
 
 .botonFinalizar {
