--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -181,7 +181,7 @@
     text-decoration: none;
 }
 
-.botonFinalizar {
+.botonFinalizar, .botonCerrarCompra {
     text-decoration: none;
     font-size: 0.8rem;
     margin: 10px;
