--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -6,7 +6,7 @@
     border-bottom: 1px solid rgb(228, 228, 228);
 }
 
-.nav img {
+.nav a {
     flex-grow: 1;
 }
 
@@ -15,43 +15,29 @@
     margin-left: 10px;
 }
 
-.nav button {
-    flex-grow: 1;
-    margin-right: 20px;
-    background-color: #0271a4; 
-    border: none;
-    border-radius: 4px;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-    
-}
-
-.nav button:hover {
-    background-color: #005075;
-}
-
-.menu {
+.navCategorias {
     list-style-type: none;
     flex-grow: 50;
+    text-align: right;
+    padding-right: 10px;
 }
 
-.menu li {
+.navCategorias li {
     float: left;
     margin: 0px 5px 0px 5px;
 }
 
-.menu li a {
+.navCategorias li a {
     color: black;
     text-decoration: none;
 }
 
-.menu li a:hover {
+.navCategorias li a:hover {
     color: rgb(85, 85, 85);
+}
+
+.cartWidgetContainer {
+    flex-basis: 60px;
 }
 
 #contadorCarrito {
@@ -69,8 +55,43 @@
 
 .itemListContainer {
     margin: auto;
-    width: 50%;
+    width: 60%;
     padding: 10px;
+}
+
+.articulo {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    width: 50%;
+    float: left;
+}
+
+.articulo img {
+    flex-grow: 0;    
+    flex-shrink: 0;
+    flex-basis: 150px;
+    height: 150px;
+    width: 150px
+}
+
+.datosArticulo {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    flex-basis: 70%;
+    border-bottom: 1px solid rgb(229, 229, 229);
+    margin-left: 10px;
+}
+
+.titulo {
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #1a7db7;
+}
+
+.numeroParte span, .precio span, .stock span {
+    font-weight: bold;
 }
 
 .itemCounter {
@@ -97,44 +118,26 @@
     font-weight: bold;
 }
 
-.articulo {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-}
-
-.articulo img {
-    max-width: 200px;
-    flex-basis: 15%;
-}
-
-.datosArticulo {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    flex-basis: 70%;
-    border-bottom: 1px solid rgb(229, 229, 229);
-    margin-left: 10px;
-}
-
-.titulo {
-    font-size: 1.1rem;
-    font-weight: bold;
-    color: #1a7db7;
-}
-
-.numeroParte span, .precio span, .stock span {
-    font-weight: bold;
+.cajaArticuloDetalle {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    border: 1px solid rgb(229, 229, 229);
+    padding: 40px;
 }
 
 .articuloDetalle {
-    width: 50%;
-    height: 50%;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 10px;
-    border: 1px solid rgb(229, 229, 229);
+    font-size: 1.4rem;
+}
+
+.articuloDetalle .titulo {
+    font-size: 1.8rem;
 }
 
 .articuloDetalle .datosArticulo {
@@ -147,7 +150,7 @@
 }
 
 .cajaImg img {
-    max-height: 300px;
+    height: 150px;
 }
 
 .articuloDetalle .titulo, .articuloDetalle .descripcion, .articuloDetalle .precio, .articuloDetalle .numeroParte, .articuloDetalle .stock {
@@ -185,7 +188,7 @@
     text-decoration: none;
     font-size: 0.8rem;
     margin: 10px;
-    background-color: #797979; 
+    background-color: #00c56c; 
     border: none;
     border-radius: 4px;
     color: white;
@@ -193,9 +196,13 @@
     cursor: pointer;
 }
 
+.divTablaCarrito h1 {
+    padding-bottom: 40px;
+}
+
 .tablaCarrito {
     margin: 0 auto;
-    width: 70%;
+    width: 50%;
 }
 
 .tablaCarrito td {
@@ -203,11 +210,11 @@
 }
 
 .tablaCarrito th {
-    width: 10%;
+    width: 5%;
 }
 
 .tablaCarrito th+th {
-    width: 30%;
+    width: 35%;
 }
 
 .tablaCarrito th+th+th {
@@ -276,3 +283,6 @@
     cursor: pointer;
 }
 
+.cajaFormCompra label {
+    padding: 10px;
+}
